tests/ui/nefeli/expressions/field-access-expressions/field-selector-tuples-2.stderr
error[E0609]: no field `first` on type `({integer}, &str, {float})`
  --> $DIR/field-selector-tuples-2.rs:5:22
   |
LL |     let _ = my_tuple.first;
   |                      ^^^^^ unknown field

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0609`.
